--- a/app/src/main/res/layout/item_people.xml
+++ b/app/src/main/res/layout/item_people.xml
@@ -14,6 +14,7 @@
         android:id="@+id/imageViewPeople"
         android:layout_width="40dp"
         android:layout_height="40dp"
+        android:src="@drawable/ic_person"
         android:gravity="center_vertical"
         android:scaleType="centerCrop" />
 
